Fix tree-view overlap & ternjs box background

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -12,6 +12,10 @@ background-tips {
     background-color: darken(@theme-background, 2%);
 }
 
+.atom-ternjs-documentation, .atom-ternjs-type {
+    background-color: @theme-focus-color;
+}
+
 .atom-dock-resize-handle {
     width: 2px !important;
 }
