--- a/styles/include-color.less
+++ b/styles/include-color.less
@@ -1,3 +1,3 @@
-@theme-color: #ffbf3b;
+@theme-color: #ffbe3c;
  @theme-background: #0c0c0c;
  @theme-overlay: #000000;
