--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -71,6 +71,7 @@
     }
 
     .tree-view-root {
+        min-width: 0px;
         padding-right: 4px;
     }
 }
